[FIX] website_forum: fix aligned images display in posts
The container size of a forum post was not correct when an image was
displayed with right or left alignment.

The css property clear was added at the end of the posts so that
floating elements do not float over the next section.

task-2469516

closes odoo/odoo#70489

--- a/addons/website_forum/static/src/scss/website_forum.scss
+++ b/addons/website_forum/static/src/scss/website_forum.scss
@@ -63,6 +63,14 @@
     }
 }
 
+.question, .forum_answer {
+    .oe_no_empty::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
+
 img.o_forum_avatar {
     max-height: 40px;
     margin-right: 10px;
